fixing sidebar
color of hamburger menu not showing on try css

--- a/CSS/attractions.css
+++ b/CSS/attractions.css
@@ -79,12 +79,35 @@ footer {
 	padding: 15px;
 	font-size: 20px;
 
+
 }
 
 .fa:hover {
 	color: #D5D5D5;
 	text-decoration: none;
 }
+.landing-text h1 {
+  text-align: center;
+   color: black;
+
+}
+/* The sidebar menu */
+.sidebar {
+  height: 100%; /* 100% Full-height */
+  width: 0; /* 0 width - change this with JavaScript */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Stay on top */
+  top: 0;
+  right: 0;
+  background-color: rgba(80,80,0, 0.6);
+  overflow-x: hidden; /* Disable horizontal scroll */
+  padding-top: 60px; /* Place content 60px from the top */
+  transition: 0.5s; /* 0.5 second transition effect to slide in the sidebar */
+  /* color: rgb(255, 255, 255); */
+}
+
+
+
 /* The sidebar links */
 .sidebar a {
   padding: 8px 8px 8px 32px;
